force-app/main/default/objects/Merchant_Terms__c/Merchant_Terms__c.object-meta.xml
<CustomObject>
    <label>Merchant Terms</label>
    <nameField>
        <displayFormat>Merchant Terms-{00000}</displayFormat>
        <label>Merchant Terms Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>