force-app/main/default/objects/Merchant_Terms__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Merchant Terms</relationshipLabel>
    <relationshipName>Merchant_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>