force-app/main/default/objects/Merchant_Terms__c/fields/Amount1__c.field-meta.xml
<CustomField>
    <fullName>Amount1__c</fullName>
    <label>Amount($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>