force-app/main/default/objects/Merchant_Terms__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount(%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>