force-app/main/default/objects/Merchant_Terms__c/fields/Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>Contract_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Received?</label>
    <type>Checkbox</type>
</CustomField>