force-app/main/default/objects/Merchant_Terms__c/fields/Days9__c.field-meta.xml
<CustomField>
    <fullName>Days9__c</fullName>
    <label>Days(#)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>