force-app/main/default/objects/Merchant_Terms__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <formula>IF(MPT_Join__r.Account__r.IsPersonAccount, MPT_Join__r.Account__r.FirstName +&apos; &apos;+ MPT_Join__r.Account__r.LastName, MPT_Join__r.Account__r.Name)</formula>
    <label>Merchant</label>
    <type>Text</type>
</CustomField>