force-app/main/default/objects/Merchant_Terms__c/fields/MPT_Join__c.field-meta.xml
<CustomField>
    <fullName>MPT_Join__c</fullName>
    <label>Payment Terms</label>
    <referenceTo>MPT_JOIN__c</referenceTo>
    <relationshipLabel>Merchant Terms</relationshipLabel>
    <relationshipName>Merchant_Terms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>