force-app/main/default/objects/Merchant_Terms__c/fields/Pay_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_by_Date__c</fullName>
    <label>Pay by Date</label>
    <type>Date</type>
</CustomField>