force-app/main/default/objects/Merchant_Terms__c/fields/Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due__c</fullName>
    <label>Payment Due</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date of departure</fullName>
            </value>
            <value>
                <fullName>Days prior to departure</fullName>
            </value>
            <value>
                <fullName>Days after purchase</fullName>
            </value>
            <value>
                <fullName>Days after departure</fullName>
            </value>
            <value>
                <fullName>Days after deal expired from website</fullName>
            </value>
            <value>
                <fullName>On Confirmation</fullName>
            </value>
            <value>
                <fullName>Days after invoice is received</fullName>
                <isActive>false</isActive>
                <label>Days after invoice is received</label>
            </value>
            <value>
                <fullName>Days since making booking</fullName>
                <isActive>false</isActive>
                <label>Days since making booking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>