force-app/main/default/objects/Merchant_Terms__c/fields/Terms_Type__c.field-meta.xml
<CustomField>
    <fullName>Terms_Type__c</fullName>
    <label>Terms Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Balance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>