force-app/main/default/objects/Merchant_Terms__c/validationRules/Prevent_User_to_Edit_If_Deal_Published.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_User_to_Edit_If_Deal_Published</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT( MPT_Join__r.Deal__r.Deal_Status__c) = &apos;Published&apos;</errorConditionFormula>
    <errorMessage>Cannot edit merchant payment terms on Published deal</errorMessage>
</ValidationRule>