force-app/main/default/objects/Merchant_Terms__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Merchant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>